nova profissão Pedagogia adicionada

--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
     <h2>Qual profissão mais te interessa?</h2>
     <ul class="profissoes-lista">
       <li>
-        <a href="desenvolvimento_software.html" target="_blank">Desenvolvimento de Software</a></li> <!--link para aba dev software-->
+        <a href="desenvolvimento_software.html" target="_blank">Desenvolvimento de Software</a></li> 
       <li>Medicina</li>
       <li>
         <a href="designer_grafico.html" target="_blank">Designer Gráfico</a></li>
-      <li>Engenharia Civil</li> <!--link para aba designer grafico-->
-      <li>Pedagogia</li>
+      <li>Engenharia Civil</li>
+      <li>
+        <a href="pedagogia.html"
+        target="_blank">Pedagogia</a></li>
     </ul>
   </section>
 
