erros de ortografia

--- a/pedagogia.html
+++ b/pedagogia.html
@@ -16,7 +16,7 @@
   <main>
     <section>
       <h2>Oque é a Pedagogia?</h2>
-      <p>Hoje em dia, a pedagogia é vista como algo muito simples e até "bobo" algumas vezes. Muitos acreditam que ser um/a pedagogo/a é apenas brincar com criaças, quando na verdade é muito mais que isso</p>
+      <p>Hoje em dia, a pedagogia é vista como algo muito simples e até "bobo" algumas vezes. Muitos acreditam que ser um/a pedagogo/a é apenas brincar com crianças, quando na verdade é muito mais que isso.</p>
       <a href="https://youtu.be/PBM5Hv6Kwu0?si=6AYLZJEXhnlb9yFq  " target="_blank">▶️ Veja um vídeo sobre o que é ser um/a pedagogo/a</a>
     </section>
 
