Atualização de Profissões

--- a/desenvolvimento_software.html
+++ b/desenvolvimento_software.html
@@ -16,6 +16,7 @@
     <section>
       <h2>Romantização da Profissão</h2>
       <p>Hoje em dia, com a força das redes sociais, grande parte dos influenciadores romantizam a área de Desenvolvimento de Software, mostrando apenas os benefícios e esquecendo das dificuldades, do estresse e da alta pressão do dia a dia real da profissão. As promessas que mais vista sobre a área são: "Com apenas 6 meses de estudo ja consegue um emprego"; "Vai ganhar muito dinheiro fácil"; "Trabalho 100% em casa"... Convenhamos que nada é tão simples assim, mas pode ficar tranquilo que estamos aqui para te ajudar a escolher a carreira que você está disposto a se dedicar tendo a visão real dela!</p>
+      <a href="https://youtu.be/CYRllf5f6HE" target="_blank">▶️ O que é um Desenvolvedor de Software?</a>
     </section>
 
     <hr>
@@ -23,7 +24,7 @@
     <section>
       <h2>Como é realmente ser um Desenvolvedor de Software</h2>
       <p>Apesar de ser uma profissão muito valorizada, o dia a dia de quem trabalha com Deselvolvimento de Software é cheio de desafios: prazos apertados, longas horas de trabalho e necessidade constante de atualização são apenas alguns deles. Não apenas nessa área, mas em qualquer outra você terá muitos desafios, então escolha a dor que está disposto a passar e siga em frente firme!! Nem todos os dias serão prezerosos, mas o deselvolvimento pessoal e sua evolução como profissional, faz valer cada pingo de esforço.</p>
-      <a href="https://youtu.be/uN9E35GxZ74" target="_blank">▶️ Veja um relato sobre a expericia de uma pessoa da área</a>
+      <a href="https://youtu.be/uN9E35GxZ74" target="_blank">▶️ Veja um relato sincero sobre</a>
     </section>
 
     <hr>
