--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       <li>Medicina</li>
       <li>
         <a href="designer_grafico.html" target="_blank">Designer Gráfico</a></li>
-      <li>Engenharia Civil</li>
+      <li>
+        <a href="engenharia_civil.html"
+        target="_blank">Engenharia Civil</a></li>
       <li>
         <a href="pedagogia.html"
         target="_blank">Pedagogia</a></li>
